<resources>
    <string name="app_name">Mregency</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign_up</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_maps">Map</string>

</resources>