<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/gradientbackground"
    tools:context=".LogInForm">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/login"
        android:layout_marginBottom="40dp"/>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="PrivateResource"
        android:textColorHint="@color/hints">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="22sp"
            tools:ignore="PrivateResource"
            android:autofillHints="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="PrivateResource"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/hints">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="20"
            android:textSize="22sp"
            tools:ignore="PrivateResource"
            android:hint="@string/password"

            android:autofillHints="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_button"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="PrivateResource" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:onClick="btn_Signup"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="PrivateResource" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:ignore="PrivateResource"

        android:textColorHint="@color/hints"/>


</LinearLayout>